Atualização dos exercícios

--- a/Seção 3 - Robôs part5.ipynb
+++ b/Seção 3 - Robôs part5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,15 @@
     "    \n",
     "    def __init__(self, x, y):\n",
     "        self.x = x\n",
-    "        self.y = y\n"
+    "        self.y = y\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return '<%s, %s>' % (self.x, self.y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,42 +27,18 @@
     "    def __init__(self, x, y, name):\n",
     "        super(Reward, self).__init__(x, y)\n",
     "        self.name = name\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return '<%s, %s>: %s' % (self.x, self.y, self.name)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return '<Reward>: %s' % str(self)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r1 = Reward(1, 2, 'moeda de ouro')\n",
-    "r2 = Reward(5, 3, 'gasolina')\n",
-    "rewards = [r1, r2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "moeda de ouro\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(r1.x)\n",
-    "print(r1.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +87,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot = Robo(2, 2)"
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r1 = Reward(random.randint(0, 10), random.randint(0, 10), 'moeda de ouro')\n",
+    "r2 = Reward(random.randint(0, 10), random.randint(0, 10), 'gasolina')\n",
+    "r3 = Reward(random.randint(0, 10), random.randint(0, 10), 'arma')\n",
+    "rewards = [r1, r2, r3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<2, 5>: moeda de ouro\n",
+      "<2, 5>: moeda de ouro\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'<Reward>: <2, 5>: moeda de ouro'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(r1)\n",
+    "print(str(r1))\n",
+    "r1.__repr__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Reward>: <2, 5>: moeda de ouro,\n",
+       " <Reward>: <8, 3>: gasolina,\n",
+       " <Reward>: <7, 7>: arma]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rewards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robot = Robo(random.randint(0, 10), random.randint(0, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<1, 5>'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(robot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +198,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +227,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +247,7 @@
        "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
