--- a/Seção 2.ipynb
+++ b/Seção 2.ipynb
@@ -1,25 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 79,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aprendendo python - Variáveis\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Aprendendo python - Variáveis\")"
+    "# Aprendendo python - Variáveis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +25,7 @@
        "int"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +54,7 @@
        "float"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +83,7 @@
        "bool"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,31 +95,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 83,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aprendendo python - Operadores\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Aprendendo python - Operadores\")"
+    "# Aprendendo python - Operadores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
+      "True\n",
       "False\n",
       "True\n",
       "False\n",
@@ -143,12 +125,14 @@
     "print(n1 > n2)\n",
     "print(n1 < n2)\n",
     "print(n1 == n2)\n",
-    "print(n1 != n2)"
+    "print(n1 != n2)\n",
+    "print(n1 >= n2)\n",
+    "print(n1 <= n2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,25 +200,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 88,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aprendendo python - Strings\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Aprendendo python - Strings\")"
+    "# Aprendendo python - Strings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -257,7 +231,7 @@
        "str"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2686,7 +2660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
