--- a/Seção 3 - Robôs part2.ipynb
+++ b/Seção 3 - Robôs part2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Robôs\n",
+    "### Vamos fazer um joguinho que permita que um robô ande por uma matriz 10 x 10 e encontre recompensas, iremos utilizar Orientação a  Objetos (OO)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -237,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
