--- a/Seção 5 - Carregando dados do arquivo com NumPy.ipynb
+++ b/Seção 5 - Carregando dados do arquivo com NumPy.ipynb
@@ -18,21 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.1212  0.104   0.5661  0.762 ]\n",
-      "[ 0.842     0.5422    0.932     0.847361]\n",
-      "[ 0.3672   0.34551  0.2344   0.1538 ]\n"
+      "[0.1212 0.104  0.5661 0.762 ]\n",
+      "[0.842    0.5422   0.932    0.847361]\n",
+      "[0.3672  0.34551 0.2344  0.1538 ]\n"
      ]
     }
    ],
    "source": [
-    "val1, val2, val3 = np.loadtxt('../../curso_python/datasets/dados.txt', skiprows=1, unpack=True)\n",
+    "val1, val2, val3 = np.loadtxt('datasets/dados.txt', skiprows=1, unpack=True)\n",
     "print(val1)\n",
     "print(val2)\n",
     "print(val3)"
@@ -40,22 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  1.21200000e-01   8.42000000e-01   3.67200000e-01]\n",
-      " [ -9.99000000e+02   5.42200000e-01   3.45510000e-01]\n",
-      " [  5.66100000e-01   9.32000000e-01  -9.99000000e+02]\n",
-      " [  7.62000000e-01   8.47361000e-01   1.53800000e-01]]\n"
+      "[[ 1.21200e-01  8.42000e-01  3.67200e-01]\n",
+      " [-9.99000e+02  5.42200e-01  3.45510e-01]\n",
+      " [ 5.66100e-01  9.32000e-01 -9.99000e+02]\n",
+      " [ 7.62000e-01  8.47361e-01  1.53800e-01]]\n"
      ]
     }
    ],
    "source": [
-    "my_array = np.genfromtxt('../../curso_python/datasets/dados_faltantes.txt', skip_header=1, filling_values=-999)\n",
+    "my_array = np.genfromtxt('datasets/dados_faltantes.txt', skip_header=1, filling_values=-999)\n",
     "print(my_array)"
    ]
   },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "array([[5, 6]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "       [6]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "       [3, 4, 6]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,16 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 8, 9, 2, 7, 1, 4, 5, 0, 6])"
+       "array([8, 9, 4, 1, 3, 2, 0, 6, 5, 7])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,16 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  1.+0.j,  10.+2.j,  20.+5.j])"
+       "array([ 1.+0.j, 10.+2.j, 20.+5.j])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "(10+2j)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "(20+5j)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "(30+7j)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "(-10-3j)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "array([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "       69, 71, 73, 75, 77, 79, 81, 83, 85, 87, 89, 91, 93, 95, 97, 99])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,25 +426,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2.        ,  2.02040816,  2.04081633,  2.06122449,  2.08163265,\n",
-       "        2.10204082,  2.12244898,  2.14285714,  2.16326531,  2.18367347,\n",
-       "        2.20408163,  2.2244898 ,  2.24489796,  2.26530612,  2.28571429,\n",
-       "        2.30612245,  2.32653061,  2.34693878,  2.36734694,  2.3877551 ,\n",
-       "        2.40816327,  2.42857143,  2.44897959,  2.46938776,  2.48979592,\n",
-       "        2.51020408,  2.53061224,  2.55102041,  2.57142857,  2.59183673,\n",
-       "        2.6122449 ,  2.63265306,  2.65306122,  2.67346939,  2.69387755,\n",
-       "        2.71428571,  2.73469388,  2.75510204,  2.7755102 ,  2.79591837,\n",
-       "        2.81632653,  2.83673469,  2.85714286,  2.87755102,  2.89795918,\n",
-       "        2.91836735,  2.93877551,  2.95918367,  2.97959184,  3.        ])"
+       "array([2.        , 2.02040816, 2.04081633, 2.06122449, 2.08163265,\n",
+       "       2.10204082, 2.12244898, 2.14285714, 2.16326531, 2.18367347,\n",
+       "       2.20408163, 2.2244898 , 2.24489796, 2.26530612, 2.28571429,\n",
+       "       2.30612245, 2.32653061, 2.34693878, 2.36734694, 2.3877551 ,\n",
+       "       2.40816327, 2.42857143, 2.44897959, 2.46938776, 2.48979592,\n",
+       "       2.51020408, 2.53061224, 2.55102041, 2.57142857, 2.59183673,\n",
+       "       2.6122449 , 2.63265306, 2.65306122, 2.67346939, 2.69387755,\n",
+       "       2.71428571, 2.73469388, 2.75510204, 2.7755102 , 2.79591837,\n",
+       "       2.81632653, 2.83673469, 2.85714286, 2.87755102, 2.89795918,\n",
+       "       2.91836735, 2.93877551, 2.95918367, 2.97959184, 3.        ])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,16 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2.  ,  2.25,  2.5 ,  2.75,  3.  ])"
+       "array([2.  , 2.25, 2.5 , 2.75, 3.  ])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2.   ,  2.125,  2.25 ,  2.375,  2.5  ])"
+       "array([2.   , 2.125, 2.25 , 2.375, 2.5  ])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "       [4, 4]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,25 +571,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 10.,  20.,  30.],\n",
-       "       [ 40.,  50.,  60.],\n",
-       "       [ 70.,  80.,  90.],\n",
-       "       [ 34.,  54.,  23.]])"
+       "array([[0.1212  , 0.842   , 0.3672  ],\n",
+       "       [0.104   , 0.5422  , 0.34551 ],\n",
+       "       [0.5661  , 0.932   , 0.2344  ],\n",
+       "       [0.762   , 0.847361, 0.1538  ]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "valores = np.genfromtxt('../../curso_python/datasets/arquivo.csv', delimiter=';', skip_header=1)\n",
+    "valores = np.genfromtxt('datasets/arquivo.csv', delimiter=';', skip_header=1)\n",
     "valores"
    ]
   },
@@ -615,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
