--- a/Seção 5 - NumPy array versus Python list.ipynb
+++ b/Seção 5 - NumPy array versus Python list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "500000000500000000\n"
+      "5000000050000000\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "987459712"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "array([20, 30, 10, 40])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "[20, 30, 10, 40]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "array([20, 30, 10, 40])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "array([20, 30, 10, 40])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "array([42, 42, 42, 42])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "[4, 3, 0]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "       [ 12,  34,  12,  43]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "array([20, 30, 40, 15])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "100"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -483,17 +483,32 @@
       " [12 13 14 15]\n",
       " [16 17 18 19]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# tranformando array em matriz\n",
     "mat1 = np.reshape(my_data, (5, 4))\n",
-    "print(mat1)"
+    "print(mat1)\n",
+    "mat1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +517,7 @@
        "10"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +541,7 @@
        "       [ 12,  34,  12,  43]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +561,7 @@
        "24"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +582,7 @@
        "[['python', 'é', 'legal'], ['guido', 'van', 'rossum'], [10, 20, 30]]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -589,11 +604,10 @@
       "text/plain": [
        "array([['python', 'é', 'legal'],\n",
        "       ['guido', 'van', 'rossum'],\n",
-       "       ['10', '20', '30']],\n",
-       "      dtype='<U6')"
+       "       ['10', '20', '30']], dtype='<U6')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +654,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +675,7 @@
        "       [10, 11, 12]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,17 +686,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 7. ,  4. ,  3. ],\n",
-       "       [ 2.5,  2.2,  2. ]])"
+       "array([[7. , 4. , 3. ],\n",
+       "       [2.5, 2.2, 2. ]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,17 +708,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 7.,  4.,  3.],\n",
-       "       [ 2.,  2.,  2.]])"
+       "array([[7., 4., 3.],\n",
+       "       [2., 2., 2.]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +740,7 @@
        "       [100, 110, 120]])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +762,7 @@
        "       [ 9, 10, 11]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +784,7 @@
        "       [ 9, 10, 11]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +806,7 @@
        "       [40, 55, 72]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +828,7 @@
        "       [16, 25, 36]], dtype=int32)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
